syntax = "proto3";

package qan.v1;

import "google/api/annotations.proto";
import "google/protobuf/empty.proto";

// MetricsNames serves list of names of metrics.
service MetricsNamesService {
  // GetMetricsNames gets map of metrics names.
  rpc GetMetricsNames(google.protobuf.Empty) returns (GetMetricsNamesResponse) {
    option (google.api.http) = {
      post: "/v0/qan/GetMetricsNames"
      body: "*"
    };
  }
}

// MetricsNamesReply is map of stored metrics:
// key is root of metric name in db (Ex:. [m_]query_time[_sum]);
// value - Human readable name of metrics.
message GetMetricsNamesResponse {
  map<string, string> data = 1;
}
